# bolson

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  Dockerfile  Doxyfile  README.md  battery.as  client.py  design-battery.html  design-hardware.html  design-overview.html  design-trip.html  docker-compose.yml  fpga.html  index.html  introduction.html  microbench-convert.html  microbench-pulsar.html  microbench.html  print.html  searchindex.js  searchindex.json  stream.html  usage.html
.github/workflows/: assets.yml  book.yml  documentation.yml  test.yml
api/: _r_e_a_d_m_e_8md.html  allocator_8cpp.html  allocator_8cpp__incl.dot  allocator_8h.html  allocator_8h__dep__incl.dot  allocator_8h__incl.dot  allocator_8h_source.html  annotated.html  arrow_8cpp.html  arrow_8cpp__incl.dot  arrow_8h.html  arrow_8h__dep__incl.dot  arrow_8h__incl.dot  arrow_8h_source.html  battery_8cpp.html  battery_8cpp__incl.dot  battery_8h.html  battery_8h__dep__incl.dot  battery_8h__incl.dot  battery_8h_source.html  bench_8cpp.html  bench_8cpp__incl.dot  bench_8h.html  bench_8h__dep__incl.dot  bench_8h__incl.dot  bench_8h_source.html  classbolson_1_1buffer_1_1_allocator-members.html  classbolson_1_1buffer_1_1_allocator.html  classbolson_1_1buffer_1_1_allocator__inherit__graph.dot  classbolson_1_1buffer_1_1_opae_allocator-members.html  classbolson_1_1buffer_1_1_opae_allocator.html  classbolson_1_1buffer_1_1_opae_allocator__coll__graph.dot  classbolson_1_1convert_1_1_converter-members.html  classbolson_1_1convert_1_1_converter.html  classbolson_1_1convert_1_1_resizer-members.html  classbolson_1_1convert_1_1_resizer.html  classbolson_1_1convert_1_1_serializer-members.html  classbolson_1_1convert_1_1_serializer.html  classbolson_1_1parse_1_1_arrow_parser-members.html  classbolson_1_1parse_1_1_arrow_parser.html  (+298 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+77 more)
battery_status/hw/: battery_status.ext.yml  battery_status.json  battery_status.mmio.yml  generate.py  sources.txt
battery_status/hw/sv/: ofs_plat_afu.sv
battery_status/hw/vhdl/: AxiTop.vhd  AxiWriteConverter.vhd  AxiWriteConvertera.vhd  battery_status.vhd  battery_status_Mantle.vhd  battery_status_Nucleus.vhd  battery_status_input.vhd  battery_status_output.vhd  dingen_vhd.vhd
battery_status/sw/: CMakeLists.txt
battery_status_2/hw/: battery_status_2.json  battery_status_2.mmio.yml  generate.py  sources.txt
battery_status_2/sw/: CMakeLists.txt
battery_status_n/hw/: .gitignore  battery_status.json  battery_status.mmio.yml  gen_battery_status.py  sources.txt
battery_status_n/sw/: CMakeLists.txt
bench/: .gitignore  README.md  bench_pulsar.py  convert_throughput.py  pulsar_throughput.py  single_batch_sweep.py  single_batch_sweep_plot.ipynb  single_batch_sweep_plot.py  single_object_latency.py  single_object_latency_plot.ipynb  single_object_latency_plot.py
bench/.ipynb_checkpoints/: single_object_latency_plot-checkpoint.ipynb
bench/plot/: bench_pulsar.py  convert_throughput_plot.py  latency.py  pulsar_throughput_plot.py  queue_latency_plot.py  stream_latency_plot.py
bench/schemas/: battery.py  tripreport.as  tripreport.py
cpp/flitter/: CMakeLists.txt
cpp/flitter/include/flitter/: log.h  protocol.h
cpp/flitter/src/flitter/: bench.cpp  bench.h  cli.cpp  cli.h  file.cpp  file.h  hive.cpp  hive.h  main.cpp  pulsar.cpp  pulsar.h  stream.cpp  stream.h  timer.h  tweets.cpp  tweets.h  utils.cpp  utils.h
cpp/jsongen/: CMakeLists.txt  README.md
cpp/jsongen/doc/: Doxyfile
cpp/jsongen/examples/: battery.as  battery.py  tripreport.as  tripreport.json  tripreport.py
cpp/jsongen/include/jsongen/: consumer.h  protocol.h  raw_client.h  raw_protocol.h  zmq_client.h  zmq_protocol.h
cpp/jsongen/src/jsongen/: arrow.cpp  arrow.h  cli.cpp  cli.h  document.cpp  document.h  file.cpp  file.h  log.h  main.cpp  producer.cpp  producer.h  raw_client.cpp  raw_server.cpp  raw_server.h  status.h  stream.cpp  stream.h  value.cpp  value.h  zmq_client.cpp  zmq_server.cpp  zmq_server.h
cpp/jsongen/test/jsongen/: test_arrow.cpp  test_gen.cpp
cpp/putong/: CMakeLists.txt
cpp/tweetgen/: CMakeLists.txt  README.md
cpp/tweetgen/src/tweetgen/: cli.cpp  cli.h  file.cpp  file.h  generate.cpp  generate.h  main.cpp  stream.cpp  stream.h
doc/: .gitignore  FPGA.md  book.toml
doc/src/: SUMMARY.md  design-battery.md  design-hardware.md  design-overview.md  design-trip.md  fpga.md  introduction.md  microbench-pulsar.md  microbench.md  schemas.md  stream.md  usage.md
hardware/battery_status_n/: .gitignore
hardware/opae/: README.md
hardware/trip_report/: .gitignore
primmap/hw/: .gitignore  primmap.ext.yml  primmap.json  primmap.mmio.yml  sources.txt
primmap/sw/: CMakeLists.txt
primmap/sw/src/: primmap.cpp
src/bolson/: bench.cpp  bench.h  cli.cpp  cli.h  converter.cpp  converter.h  file.cpp  file.h  latency.cpp  latency.h  log.h  main.cpp  metrics.cpp  metrics.h  pulsar.cpp  pulsar.h  status.cpp  status.h  stream.cpp  stream.h  utils.cpp  utils.h
src/flitter/: cli.cpp  cli.h  converter.cpp  converter.h  file.cpp  file.h  main.cpp  pulsar.cpp  pulsar.h  status.h  stream.cpp  stream.h  utils.cpp  utils.h
sum/: README.md
sum/hw/: .gitignore  README.md  example.rb  generate-input.py  sources.txt  sum.json  sum.mmio.yml
sum/hw/src/: AxiTop.vhd  (+6 more)
sum/sw/: CMakeLists.txt  README.md
trip_report/: .gitignore
trip_report/hw/: .gitignore  generate.py  sources.txt  trip_report.mmio.yml
trip_report/sw/: CMakeLists.txt
trip_report_n/hw/: gen_trip_report.py  generate.py
trip_report_n/sw/: CMakeLists.txt
trip_report_n/sw/src/: opae_trip_report_impl.cpp  opae_trip_report_impl.h  test.cpp  trip_report.cpp
(+157 files in other folders)
